merge code và hoàn thiện code